cmake_minimum_required(VERSION 3.17)
project(Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab2-10 problem10.cpp)
add_executable(Lab2-11 problem11.cpp)
add_executable(Lab2-13 problem13.cpp)
add_executable(Lab2-14 problem14.cpp)
add_executable(Lab2-15 problem15.cpp)
add_executable(Lab2-16 problem16.cpp)
add_executable(Lab2-17 problem17.cpp)