cmake_minimum_required(VERSION 3.17)
project(Lab3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab3-5 problem5.cpp)
add_executable(Lab3-7 problem7.cpp)
add_executable(Lab3-8 problem8.cpp)
add_executable(Lab3-9 problem9.cpp)
add_executable(Lab3-10 problem10.cpp)
add_executable(Lab3-11 problem11.cpp)
add_executable(Lab3-12 problem12.cpp)
