cmake_minimum_required(VERSION 3.17)
project(Lab5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab5-5 problem5.cpp)
add_executable(Lab5-6 problem6.cpp)
add_executable(Lab5-10 problem10.cpp)
add_executable(Lab5-11 problem11.cpp)
add_executable(Lab5-12 problem12.cpp)
add_executable(Lab5-13 problem13.cpp)
add_executable(Lab5-14 problem14.cpp)
add_executable(Lab5-17 problem17.cpp)
add_executable(Lab5-18 problem18.cpp)