cmake_minimum_required(VERSION 3.17)
project(Lab7)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab7-10 problem10.cpp)
add_executable(Lab7-11 problem11.cpp)
add_executable(Lab7-12 problem12.cpp)
add_executable(Lab7-13 problem13.cpp)
add_executable(Lab7-14 problem14.cpp)
add_executable(Lab7-15 problem15.cpp)