cmake_minimum_required(VERSION 3.19)
project(Lab8)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab8-15 problem15.cpp)
add_executable(Lab8-16 problem16.cpp)
add_executable(Lab8-17 problem17.cpp)
add_executable(Lab8-18 problem18.cpp)
add_executable(lab8-19 problem19.cpp)
add_executable(Lab8-20 problem20.cpp)